[gd_scene load_steps=11 format=2]

[ext_resource path="res://zqf_entity_editor/zqf_entity_editor_camera.gd" type="Script" id=1]
[ext_resource path="res://zqf_entity_editor/zqf_entity_editor.gd" type="Script" id=2]
[ext_resource path="res://zqf/zqf_ui_mouse_over.gd" type="Script" id=3]
[ext_resource path="res://zqf_entity_editor/ui/ZqfEntityEditorButton.tscn" type="PackedScene" id=4]

[sub_resource type="SpatialMaterial" id=4]
flags_unshaded = true
albedo_color = Color( 0, 0.345098, 1, 1 )

[sub_resource type="CubeMesh" id=1]
size = Vector3( 0.2, 0.2, 1 )

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="CubeMesh" id=2]
size = Vector3( 1, 0.2, 0.2 )

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0.176471, 1, 0.176471, 1 )

[sub_resource type="CubeMesh" id=3]
size = Vector3( 0.2, 1, 0.2 )

[node name="ZqfEntityEditor" type="Spatial"]
script = ExtResource( 2 )

[node name="camera" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 6 )
script = ExtResource( 1 )

[node name="Camera" type="Camera" parent="camera"]
current = true

[node name="RayCast" type="RayCast" parent="camera"]
enabled = true
cast_to = Vector3( 0, 0, -1000 )

[node name="cursor3d" type="Spatial" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="cursor3d"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.5 )
material_override = SubResource( 4 )
mesh = SubResource( 1 )
material/0 = null

[node name="MeshInstance2" type="MeshInstance" parent="cursor3d"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, 0 )
material_override = SubResource( 5 )
mesh = SubResource( 2 )
material/0 = null

[node name="MeshInstance3" type="MeshInstance" parent="cursor3d"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
material_override = SubResource( 6 )
mesh = SubResource( 3 )
material/0 = null

[node name="ents" type="Spatial" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="left_sidebar_root" type="VBoxContainer" parent="CanvasLayer"]
margin_right = 256.0
margin_bottom = 720.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mode_label" type="Label" parent="CanvasLayer/left_sidebar_root"]
margin_right = 256.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 24 )
text = "mode_label"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/left_sidebar_root"]
margin_top = 28.0
margin_right = 256.0
margin_bottom = 60.0
alignment = 1

[node name="file" type="Button" parent="CanvasLayer/left_sidebar_root/HBoxContainer"]
margin_left = 52.0
margin_right = 100.0
margin_bottom = 32.0
rect_min_size = Vector2( 48, 32 )
text = "file"

[node name="add" type="Button" parent="CanvasLayer/left_sidebar_root/HBoxContainer"]
margin_left = 104.0
margin_right = 152.0
margin_bottom = 32.0
rect_min_size = Vector2( 48, 32 )
text = "add"

[node name="edit" type="Button" parent="CanvasLayer/left_sidebar_root/HBoxContainer"]
margin_left = 156.0
margin_right = 204.0
margin_bottom = 32.0
rect_min_size = Vector2( 48, 32 )
text = "edit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="template_list" type="Control" parent="CanvasLayer/left_sidebar_root"]
margin_top = 64.0
margin_right = 256.0
margin_bottom = 64.0

[node name="buttons" type="VBoxContainer" parent="CanvasLayer/left_sidebar_root/template_list"]
margin_right = 256.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="current_template_name" type="Label" parent="CanvasLayer/left_sidebar_root/template_list/buttons"]
margin_right = 256.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="file_ui_container" type="VBoxContainer" parent="CanvasLayer/left_sidebar_root"]
margin_top = 68.0
margin_right = 256.0
margin_bottom = 112.0

[node name="load" parent="CanvasLayer/left_sidebar_root/file_ui_container" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 256.0
margin_bottom = 20.0
text = "load"

[node name="save" parent="CanvasLayer/left_sidebar_root/file_ui_container" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 24.0
margin_right = 256.0
margin_bottom = 44.0
text = "save"
